[package]
name = "tl"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
urlencoding = "2.1.3"
